# insurance-dependent-fs

./: .gitignore  README.md  pyproject.toml  run_tests_databricks.py
notebooks/: dependent_fs_demo.py
src/insurance_dependent_fs/: __init__.py  diagnostics.py  premium.py  training.py  wrapper.py
tests/: conftest.py  test_benchmarks.py  test_data.py  test_diagnostics.py  test_model.py  test_premium.py  test_training.py  test_wrapper.py
