[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-dependent-fs"
version = "0.1.0"
description = "Dependent frequency-severity neural two-part model for insurance pricing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Ralph", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "pricing",
    "frequency",
    "severity",
    "neural-network",
    "multi-task-learning",
    "actuarial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6.0"]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-dependent-fs"
Repository = "https://github.com/burning-cost/insurance-dependent-fs"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_dependent_fs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
